test/valid/56332_factorial_in_aguda/factorial_in_aguda.agu
-- Author: 56332, Student Ricardo Sobral
let factorial (n) : Int -> Int =
    if n == 0 then 1 else n * factorial(n - 1)
let main(_) : Unit -> Unit = print(factorial(10))