test/invalid-syntax/56332_lexical_error_string_in_a_int/lexical_error_string_in_a_int.agu
-- Author: 56332, Student Ricardo Sobral
    let num : Int = 123abc  -- Erro léxico: número inválido